Refactor the app status endpoint
The Spring actuator health endpoint did not work as expected, and created a custom endpoint, named "hello".